samples/_failures_safe/1761339974_dac282_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7478a12a.c: In function ‘main’:
./samples/SAFE/__tmp_7478a12a.c:131:13: error: expected ‘;’ at end of input
  131 |     return 0
      |             ^
      |             ;
./samples/SAFE/__tmp_7478a12a.c:131:5: error: expected declaration or statement at end of input
  131 |     return 0
      |     ^~~~~~
